--- a/cs/argitalpena/locales/eu/LC_MESSAGES/cs.argitalpena.po
+++ b/cs/argitalpena/locales/eu/LC_MESSAGES/cs.argitalpena.po
@@ -1,10 +1,10 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2009-05-06 13:16+0000\n"
-"PO-Revision-Date: 2009-05-06 15:17+0100\n"
-"Last-Translator: lur <libargutxi@codesyntax.com>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Project-Id-Version: cs.argitalpena\n"
+"POT-Creation-Date: 2011-12-06 17:12+0000\n"
+"PO-Revision-Date: 2011-12-06 18:14+0100\n"
+"Last-Translator: Mikel Larreategi <mlarreategi@codesyntax.com>\n"
+"Language-Team: eu <eu@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -13,27 +13,39 @@ msgstr ""
 "Language-Name: Basque\n"
 "Preferred-Encodings: utf-8 latin1\n"
 "Domain: DOMAIN\n"
+"X-Poedit-Language: Basque\n"
 
-#: ./interfaces.py:20
-msgid "A short summary of this product"
-msgstr ""
+#: ./profiles/default/types/argitalpena.xml
+msgid "A publication object that can save multiple files and an image"
+msgstr "Fitxategi asko eta irudi bat izan ditzakeen elementua. Argitalpenak gordetzeko erabiltzen dena."
 
 #: ./interfaces.py:19
 msgid "Description"
-msgstr ""
+msgstr "Deskribapena"
 
-#. Default: "Description of the Example Type"
-#: ./profiles/default/types/argitalpena.xml
-msgid "Description of the Example Type"
-msgstr ""
+#: ./interfaces.py:20
+msgid "Enter the description of this publication"
+msgstr "Argitalpen batek fitxategi nagusi bat, fitxategi gehigarriak eta irudi bat izan ditzake"
 
+#: ./content/argitalpena.py:37
 #: ./interfaces.py:23
 msgid "File"
 msgstr "Fitxategia"
 
+#: ./content/argitalpena.py:38
+#: ./interfaces.py:24
+msgid "File description"
+msgstr "Hauxe izango da argitalpenaren fitxategi nagusia, Google Viewer-en bisorean erakutsiko dena eta deskargatzeko agertuko dena."
+
+#. Default: "The image of this publication"
 #: ./content/argitalpena.py:27
+#: ./interfaces.py:27
 msgid "Image"
 msgstr "Irudia"
+
+#: ./interfaces.py:28
+msgid "Image description"
+msgstr "Irudi hau argitalpen multzo bat erakusten denean erabiliko da. Normalean lehenengo orrialdearen irudia kargatu behar duzu hemen."
 
 #: ./interfaces.py:15
 msgid "Name"
@@ -42,18 +54,10 @@ msgstr "Izena"
 #. Default: "argitalpena"
 #: ./profiles/default/types/argitalpena.xml
 msgid "argitalpena"
-msgstr "argitalpena"
+msgstr "Argitalpena"
 
-#. Default: "Barruko elementuak"
-#: ./browser/argitalpenaview.pt:40
-msgid "barruko-elementuak"
-msgstr "Barruko elementuak"
-
-#: ./content/argitalpena.py:38
-msgid "description_file"
-msgstr ""
-
-#: ./content/argitalpena.py:37
-msgid "file"
-msgstr "fitxategia"
+#. Default: "Your browser does not support iframes. Download the document at ${link}"
+#: ./browser/argitalpenaview.pt:30
+msgid "label_argitalpena_does_not_support_iframes"
+msgstr "Zure nabigatzaileak ezin ditu iframeak erakutsi. Jatorrizko dokumentua hemen lor dezakezu: ${link}"
 
