--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,7 +1,14 @@
 Changelog
 =========
 
-1.0 (xxxx-xx-xx)
+2.0 (2011/12/07)
 ------------------
+
+ - Plone 4 compatibility [erral]
+
+1.0 (unreleased)
+------------------
+
+ - Previous versions for Plone < 4
 
  - Created recipe with ZopeSkel [Lur Ibargutxi].
