--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,13 @@
 Changelog
 =========
 
+2.1 (2013/05/23)
+-----------------------
+
+ - Plone 4.3 compatibility [erral]
+
+ - PEP8 [erral]
+
 2.0 (2011/12/07)
 ------------------
 
