--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,10 +1,11 @@
 Changelog
 =========
 
-2.4 (unreleased)
-----------------
+2.3.1 (2015-05-26)
+------------------
 
-- Nothing changed yet.
+- docs [Mikel Larreategi <mlarreategi@codesyntax.com>]
+
 
 
 2.3 (2015-05-26)
