--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,10 +1,13 @@
 Changelog
 =========
 
-2.3.2 (unreleased)
+2.3.2 (2015-05-26)
 ------------------
 
-- Nothing changed yet.
+- fix manifest [Mikel Larreategi <mlarreategi@codesyntax.com>]
+
+- remove unneeded [Mikel Larreategi <mlarreategi@codesyntax.com>]
+
 
 
 2.3.1 (2015-05-26)
