--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,10 +1,13 @@
 Changelog
 =========
 
-2.3.3 (unreleased)
+2.3.3 (2015-05-27)
 ------------------
 
-- Nothing changed yet.
+- del [Mikel Larreategi <mlarreategi@codesyntax.com>]
+
+- add missing import [Mikel Larreategi <mlarreategi@codesyntax.com>]
+
 
 
 2.3.2 (2015-05-26)
